@@ -32,8 +32,6 @@
 
 #define ITER 500000
 
-//int verbose = 0;
-
 using namespace Jack;
 
 struct ServerThread : public JackRunnableInterface {
