@@ -57,8 +57,6 @@
 
 using namespace Jack;
 
-//int verbose = 0;
-
 class Test2 : public JackRunnableInterface
 {
 
