@@ -55,8 +55,6 @@
 #define SERVER "serveur3"
 #define CLIENT "client3"
 
-//int verbose = 0;
-
 using namespace Jack;
 
 #ifdef WIN32
